Fix address type form issues
* The form was too long on the desktop banners
* The form was breaking the initial banner size calculation
  so added a workaround
* Toggle the direct debit warning notice with the anonymous
  notice when DD is selected

Ticket: https://phabricator.wikimedia.org/T334830

--- a/banners/desktop/styles/BannerMain.scss
+++ b/banners/desktop/styles/BannerMain.scss
@@ -40,7 +40,6 @@ $form-width: 300px !default;
 		display: flex;
 		flex-direction: column;
 		width: $form-width;
-		min-height: 315px;
 		padding: 10px 0;
 	}
 }
