--- a/src/themes/Treedip/DonationForm/Forms/AddressTypeForm.scss
+++ b/src/themes/Treedip/DonationForm/Forms/AddressTypeForm.scss
@@ -5,9 +5,18 @@
 .wmde-banner {
 	@include AddressTypeForm.layout;
 
+	// This form is long and causes issues with the banner height
+	// So make it short until the banner becomes visible
+	&--initial {
+		.wmde-banner-form-address-type {
+			height: 100px;
+		}
+	}
+
 	&-form-address-type {
+
 		.wmde-banner-form-field-group {
-			padding: 0 0 10px;
+			padding: 0 0 8px;
 
 			&-legend {
 				display: none;
@@ -23,7 +32,7 @@
 			display: block;
 			height: 16px;
 			width: 50px;
-			margin-bottom: 10px;
+			margin-bottom: 7px;
 		}
 
 		&-title {
@@ -32,14 +41,23 @@
 		}
 
 		&-notice {
-			font-weight: bold;
 			font-size: 12px;
 			margin-bottom: auto;
+			margin-top: -10px;
+			padding-left: 26px;
+		}
 
-			/* min-height is to reserve space and prevent 1st page from "jumping",
-				because the last page has the largest height
-			 */
-			min-height: 28px;
+		&-error {
+			line-height: 16px;
+			color: colors.$error;
+			font-weight: bold;
+			text-align: center;
+			margin-bottom: 0.2em;
+			font-size: 0.8em;
+		}
+
+		.address-type-none.wmde-banner-disabled .wmde-banner-select-group-notice {
+			display: none;
 		}
 
 		.wmde-banner-select-group-notice {
@@ -47,6 +65,10 @@
 			font-size: 12px;
 			line-height: 1.5;
 			padding-left: 25px;
+		}
+
+		.wmde-banner-select-group-error-message {
+			height: auto;
 		}
 	}
 }
