--- a/src/themes/Treedip/DonationForm/Forms/UpgradeToYearlyForm.scss
+++ b/src/themes/Treedip/DonationForm/Forms/UpgradeToYearlyForm.scss
@@ -38,7 +38,7 @@ $custom-link-text-align: left !default;
 			display: block;
 			height: 16px;
 			width: 50px;
-			margin-bottom: 10px;
+			margin-bottom: 7px;
 		}
 
 		&-notice {
